--- a/Projet Pizzeria/packages.config
+++ b/Projet Pizzeria/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
@@ -9,6 +10,7 @@
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Design" version="3.1.19" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.EntityFrameworkCore.Proxies" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Sqlite" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Sqlite.Core" version="3.1.19" targetFramework="net472" />
