--- a/Projet Pizzeria/packages.config
+++ b/Projet Pizzeria/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.19" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.37" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net472" />
