Add DataGrid for client
TODO : faire marcher les boutons

--- a/Projet Pizzeria/Projet Pizzeria.csproj
+++ b/Projet Pizzeria/Projet Pizzeria.csproj
@@ -186,6 +186,9 @@
     <Compile Include="View\CommandeView.xaml.cs">
       <DependentUpon>CommandeView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\NewClientDialog.xaml.cs">
+      <DependentUpon>NewClientDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -213,6 +216,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\CommandeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\NewClientDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
