--- a/Projet Pizzeria/Projet Pizzeria.csproj
+++ b/Projet Pizzeria/Projet Pizzeria.csproj
@@ -180,6 +180,28 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controller\ModuleClientEffectifImportExport.cs" />
+    <Compile Include="Migrations\20211007175630_Update3ClientContext.cs" />
+    <Compile Include="Migrations\20211007175630_Update3ClientContext.designer.cs">
+      <DependentUpon>20211007175630_Update3ClientContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211007184343_Update3.1ClientContext.cs" />
+    <Compile Include="Migrations\20211007184343_Update3.1ClientContext.designer.cs">
+      <DependentUpon>20211007184343_Update3.1ClientContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Livreur\20211007184411_Update3.1LivreurContext.cs" />
+    <Compile Include="Migrations\Livreur\20211007184411_Update3.1LivreurContext.designer.cs">
+      <DependentUpon>20211007184411_Update3.1LivreurContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Pizzeria\20211007181106_Update3.1PizzeriaContext.cs" />
+    <Compile Include="Migrations\Pizzeria\20211007181106_Update3.1PizzeriaContext.designer.cs">
+      <DependentUpon>20211007181106_Update3.1PizzeriaContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Pizzeria\20211007184458_Update3.2PizzeriaContext.cs" />
+    <Compile Include="Migrations\Pizzeria\20211007184458_Update3.2PizzeriaContext.designer.cs">
+      <DependentUpon>20211007184458_Update3.2PizzeriaContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Pizzeria\PizzeriaContextModelSnapshot.cs" />
     <Compile Include="View\ClientView.xaml.cs">
       <DependentUpon>ClientView.xaml</DependentUpon>
     </Compile>
@@ -253,19 +275,6 @@
       <DependentUpon>20211005100426_InitialLivreurCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Livreur\LivreurContextModelSnapshot.cs" />
-    <Compile Include="Migrations\Pizzeria\20211005115205_InitialPizzeriaCreate.cs" />
-    <Compile Include="Migrations\Pizzeria\20211005115205_InitialPizzeriaCreate.designer.cs">
-      <DependentUpon>20211005115205_InitialPizzeriaCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Pizzeria\20211005211847_Update1PizzeriaContext.cs" />
-    <Compile Include="Migrations\Pizzeria\20211005211847_Update1PizzeriaContext.designer.cs">
-      <DependentUpon>20211005211847_Update1PizzeriaContext.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Pizzeria\20211006085635_Update2PizzeriaContext.cs" />
-    <Compile Include="Migrations\Pizzeria\20211006085635_Update2PizzeriaContext.designer.cs">
-      <DependentUpon>20211006085635_Update2PizzeriaContext.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Pizzeria\PizzeriaContextModelSnapshot.cs" />
     <Compile Include="Model\Adresse.cs" />
     <Compile Include="Model\AItem.cs" />
     <Compile Include="Model\Boisson.cs" />
@@ -304,6 +313,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.2\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
