--- a/Projet Pizzeria/Projet Pizzeria.csproj
+++ b/Projet Pizzeria/Projet Pizzeria.csproj
@@ -208,6 +208,9 @@
     <Compile Include="View\CommandeView.xaml.cs">
       <DependentUpon>CommandeView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\ImportPersonneDialog.xaml.cs">
+      <DependentUpon>ImportPersonneDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\NewClientDialog.xaml.cs">
       <DependentUpon>NewClientDialog.xaml</DependentUpon>
     </Compile>
@@ -238,6 +241,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\CommandeView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ImportPersonneDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
