Starting NewCommande Dialog

--- a/Projet Pizzeria/Projet Pizzeria.csproj
+++ b/Projet Pizzeria/Projet Pizzeria.csproj
@@ -222,6 +222,9 @@
     <Compile Include="View\NewClientDialog.xaml.cs">
       <DependentUpon>NewClientDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\NewCommandeDialog.xaml.cs">
+      <DependentUpon>NewCommandeDialog.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -257,6 +260,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\NewClientDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\NewCommandeDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
