--- a/Projet Pizzeria/packages.config
+++ b/Projet Pizzeria/packages.config
@@ -30,6 +30,7 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.19" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.37" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="RabbitMQ.Client" version="6.2.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.2" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.2" targetFramework="net472" />
@@ -42,5 +43,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
